--- a/static/styles.css
+++ b/static/styles.css
@@ -207,3 +207,8 @@ body {
 .modal.fade .modal-dialog {
   transform: rotateY(90deg);
 }
+.card-img-top {
+  width: 100%;
+  height: 200px; /* Atur tinggi gambar sesuai kebutuhan */
+  object-fit: cover; /* Memastikan gambar tetap proporsional */
+}
